fix: removing title on smaller screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,4 +78,8 @@
     padding-left: 0;
     margin: 0;
   }
+
+  p {
+    display: none;
+  }
 }
